Make shoppingcart an array of arrays
Changed shoppingcart.rb methods as well as appinterfacemethods.rb > displaycartcontents() method. Also made changes to ruby.yml, to perform rake test after pushing on "requirements/arrayofarrays" branch

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -9,7 +9,7 @@ name: Ruby
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "requirements/arrayofarrays" ]
   pull_request:
     branches: [ "main" ]
 
